@@ -1,3 +1,9 @@
+2003-01-09  Ben Elliston  <bje@redhat.com>
+
+        From Graydon Hoare <graydon@redhat.com>:
+	* utils-sim.scm (-gen-decoder-switch): Fix edge condition for
+	empty ISAs.
+
 2002-12-21  Doug Evans  <dje@sebabeach.org>
 
 	* ifield.scm (-ifield-parse): Rewrite <bitrange> computation.
